@@ -24,7 +24,7 @@ under the License.
 	<parent>
 		<groupId>org.apache</groupId>
 		<artifactId>apache</artifactId>
-		<version>13</version>
+		<version>16</version>
 	</parent>
 
 	<groupId>org.apache.blur</groupId>
@@ -172,8 +172,8 @@ under the License.
 	</scm>
 
 	<properties>
-        <commons-logging.version>1.1.3</commons-logging.version>
-        <commons-lang.version>2.4</commons-lang.version>
+		<commons-logging.version>1.1.3</commons-logging.version>
+		<commons-lang.version>2.4</commons-lang.version>
 		<zookeeper.version>3.4.5</zookeeper.version>
 		<log4j.version>1.2.15</log4j.version>
 		<jersey.version>1.14</jersey.version>
@@ -191,8 +191,101 @@ under the License.
 		<json.version>20090211</json.version>
 		<mrunit.version>0.9.0-incubating</mrunit.version>
 		<httpclient.version>4.1.3</httpclient.version>
-		<servlet-api.version>2.5</servlet-api.version>
+		<servlet-api.version>3.0.1</servlet-api.version>
+		<hive.version>0.13.1</hive.version>
+		<java-allocation-instrumenter.version>3.0</java-allocation-instrumenter.version>
 	</properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+              <groupId>commons-logging</groupId>
+              <artifactId>commons-logging</artifactId>
+              <version>${commons-logging.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>commons-io</groupId>
+              <artifactId>commons-io</artifactId>
+              <version>2.1</version>
+            </dependency>
+            <dependency>
+              <groupId>org.eclipse.jetty</groupId>
+              <artifactId>jetty-webapp</artifactId>
+              <version>8.1.16.v20140903</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-jsp</artifactId>
+                <version>8.1.16.v20140903</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-test</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-client</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-minicluster</artifactId>
+                <version>${hadoop.version}</version>
+            </dependency>
+			<dependency>
+				<groupId>com.google.code.java-allocation-instrumenter</groupId>
+				<artifactId>java-allocation-instrumenter</artifactId>
+				<version>${java-allocation-instrumenter.version}</version>
+			</dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>${log4j.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.mail</groupId>
+                        <artifactId>mail</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>javax.jms</groupId>
+                        <artifactId>jms</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.jdmk</groupId>
+                        <artifactId>jmxtools</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.jmx</groupId>
+                        <artifactId>jmxri</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>${zookeeper.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.mail</groupId>
+                        <artifactId>mail</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>javax.jms</groupId>
+                        <artifactId>jms</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.jdmk</groupId>
+                        <artifactId>jmxtools</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.sun.jmx</groupId>
+                        <artifactId>jmxri</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -211,6 +304,10 @@ under the License.
 		<repository>
 			<id>cloudera</id>
 			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+		</repository>
+		<repository>
+			<id>hortonworks</id>
+			<url>http://repo.hortonworks.com/content/repositories/public/</url>
 		</repository>
 	</repositories>
 
@@ -248,6 +345,7 @@ under the License.
 						<!-- JS Libraries that could not be included through bower -->
 						<exclude>**/src/main/webapp/js/utils/*</exclude>
 						<exclude>**/src/main/webapp/public/js/modernizr.js</exclude>
+						<exclude>**/src/main/webapp/less/tagmanager.less</exclude>
 
 						<!-- Files used for building the UI -->
 						<exclude>**/src/main/webapp/node_modules/**</exclude>
@@ -268,8 +366,8 @@ under the License.
 
 						<!-- These javascript libs are accounted for in the
 						LICENSE file in root of the project -->
-						<exclude>**/src/main/webapp/js/d3.v2.js</exclude>
-						<exclude>**/src/main/webapp/js/d3.v2.min.js</exclude>
+						<exclude>**/js/d3.v2.js</exclude>
+						<exclude>**/js/d3.v2.min.js</exclude>
 
 						<!-- License and Notice files for Blur -->
 						<exclude>**/src/main/resources*/license-notes.txt</exclude>
@@ -307,15 +405,29 @@ under the License.
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.6</source>
+						<target>1.6</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
-						<argLine>-XX:+UseConcMarkSweepGC -Xmx1g -Xms1g</argLine>
+						<argLine>-XX:+UseConcMarkSweepGC -Xmx1g -Xms1g -XX:MaxPermSize=256m</argLine>
 						<forkCount>2</forkCount>
 						<forkMode>always</forkMode>
 						<reuseForks>false</reuseForks>
 						<systemPropertyVariables>
 							<blur.tmp.dir>${project.build.directory}/target/tmp</blur.tmp.dir>
 						</systemPropertyVariables>
+						<environmentVariables>
+							<JAVA_HOME>${java.home}</JAVA_HOME>
+						</environmentVariables>
+						<excludes>
+							<exclude>**/*IT.java</exclude>
+						</excludes>
 					</configuration>
 				</plugin>
 				<!-- Ignore/Execute plugin execution -->
@@ -389,18 +501,21 @@ under the License.
 			</activation>
 			<properties>
 				<hadoop.version>1.2.1</hadoop.version>
+                <projectVersion>hadoop1-${hadoop.version}-${project.parent.version}</projectVersion>
 			</properties>
 			<modules>
-                                <module>blur-console</module>
+				<module>blur-command</module>
+				<module>blur-console</module>
 				<module>blur-core</module>
+				<module>blur-hive</module>
 				<module>blur-thrift</module>
 				<module>blur-query</module>
 				<module>blur-store</module>
-				<module>blur-mapred-hadoop1</module>
+				<module>blur-mapred</module>
 				<module>blur-util</module>
-				<module>blur-gui</module>
+				<module>blur-status</module>
 				<module>blur-shell</module>
-				<module>blur-command</module>
+				<module>blur-integration-tests</module>
 				<module>distribution</module>
 			</modules>
 		</profile>
@@ -412,19 +527,22 @@ under the License.
 				</property>
 			</activation>
 			<properties>
-				<hadoop.version>2.3.0-mr1-cdh5.0.2</hadoop.version>
+				<hadoop.version>2.5.0-mr1-cdh5.3.0</hadoop.version>
+                <projectVersion>hadoop2-mr1-${hadoop.version}-${project.parent.version}</projectVersion>
 			</properties>
 			<modules>
-                                <module>blur-console</module>
+				<module>blur-command</module>
+				<module>blur-console</module>
 				<module>blur-core</module>
+				<module>blur-hive</module>
 				<module>blur-thrift</module>
 				<module>blur-query</module>
 				<module>blur-store</module>
-				<module>blur-mapred-hadoop1</module>
+				<module>blur-mapred</module>
 				<module>blur-util</module>
-				<module>blur-gui</module>
+				<module>blur-status</module>
 				<module>blur-shell</module>
-				<module>blur-command</module>
+				<module>blur-integration-tests</module>
 				<module>distribution</module>
 			</modules>
 		</profile>
@@ -436,18 +554,22 @@ under the License.
 				</property>
 			</activation>
 			<properties>
-				<hadoop.version>2.2.0</hadoop.version>
+				<hadoop.version>2.6.0</hadoop.version>
+                <projectVersion>hadoop2-${hadoop.version}-${project.parent.version}</projectVersion>
 			</properties>
 			<modules>
-                                <module>blur-console</module>
+				<module>blur-command</module>
+				<module>blur-console</module>
 				<module>blur-core</module>
+				<module>blur-hive</module>
 				<module>blur-thrift</module>
 				<module>blur-query</module>
 				<module>blur-store</module>
-				<module>blur-mapred-hadoop2</module>
+				<module>blur-mapred</module>
 				<module>blur-util</module>
-				<module>blur-gui</module>
+				<module>blur-status</module>
 				<module>blur-shell</module>
+				<module>blur-integration-tests</module>
 				<module>distribution</module>
 			</modules>
 		</profile>
